syntax = "proto3";
package payments;

service L1Payments {
    rpc SendPayment (L1PaymentRequest) returns (L1PaymentResponse);
}

message L1PaymentRequest {
    string from_addr = 1;
    string to_addr = 2;
    uint32 amount = 3;
}

message L1PaymentResponse {
    bool successful = 1;
    string message = 2;
}